--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,9 +18,11 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Depends:
+    R6
 Imports:
-    R6,
-    dplyr
+    dplyr,
+    stats
 Suggests: 
     knitr,
     rmarkdown,
