allow multiple scales

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(print,FrequencyTable)
 S3method(print,ScoreTable)
 S3method(print,StandardScale)
 S3method(summary,CompFreqtable)
-export(CompFreqtable)
+export(CompScoreTable)
 export(Comp_Freqtable)
 export(FrequencyTable)
 export(STANINE)
@@ -18,5 +18,6 @@ export(TANINE)
 export(TETRONIC)
 export(WECHSLER_IQ)
 export(gen_freqtable)
+export(normalize_score)
 import(R6)
 importFrom(dplyr,left_join)
