--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,19 @@ S3method(print,FrequencyTable)
 S3method(print,ScoreTable)
 S3method(print,StandardScale)
 S3method(summary,CompFreqtable)
+S3method(summary,FrequencyTable)
 export(CompScoreTable)
 export(Comp_Freqtable)
 export(FrequencyTable)
 export(STANINE)
 export(STEN)
 export(ScoreTable)
+export(SimFrequencyTable)
 export(StandardScale)
 export(TANINE)
 export(TETRONIC)
 export(WECHSLER_IQ)
+export(attach_scales)
 export(gen_freqtable)
 export(normalize_score)
 import(R6)
