--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,9 @@ S3method(plot,StandardScale)
 S3method(print,FrequencyTable)
 S3method(print,ScoreTable)
 S3method(print,StandardScale)
-S3method(summary,CompFreqtable)
+S3method(summary,CompScoreTable)
 S3method(summary,FrequencyTable)
 export(CompScoreTable)
-export(Comp_Freqtable)
 export(FrequencyTable)
 export(STANINE)
 export(STEN)
@@ -20,7 +19,6 @@ export(TANINE)
 export(TETRONIC)
 export(WECHSLER_IQ)
 export(attach_scales)
-export(gen_freqtable)
 export(normalize_score)
+export(strip_ScoreTable)
 import(R6)
-importFrom(dplyr,left_join)
