functions to handle items data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(CompScoreTable)
 export(FrequencyTable)
 export(STANINE)
 export(STEN)
+export(ScaleSpec)
 export(ScoreTable)
 export(SimFrequencyTable)
 export(StandardScale)
@@ -21,4 +22,5 @@ export(WECHSLER_IQ)
 export(attach_scales)
 export(normalize_score)
 export(strip_ScoreTable)
+export(sum_items_to_scale)
 import(R6)
