added row-wise functional NA imputation; ScaleSpec rework; CombScaleSpec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ S3method(plot,FrequencyTable)
 S3method(plot,ScoreTable)
 S3method(plot,StandardScale)
 S3method(print,FrequencyTable)
+S3method(print,ScaleSpec)
 S3method(print,ScoreTable)
 S3method(print,StandardScale)
 S3method(summary,CompScoreTable)
 S3method(summary,FrequencyTable)
+export(CombScaleSpec)
 export(CompScoreTable)
 export(FrequencyTable)
 export(STANINE)
