normalize_scores_df() addition

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(TETRONIC)
 export(WECHSLER_IQ)
 export(attach_scales)
 export(normalize_score)
+export(normalize_scores_df)
 export(strip_ScoreTable)
 export(sum_items_to_scale)
 import(R6)
