--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,21 @@ S3method(plot,ScoreTable)
 S3method(plot,StandardScale)
 S3method(print,CombScaleSpec)
 S3method(print,FrequencyTable)
+S3method(print,GroupAssignment)
+S3method(print,GroupConditions)
 S3method(print,ScaleSpec)
 S3method(print,ScoreTable)
 S3method(print,StandardScale)
 S3method(summary,CombScaleSpec)
 S3method(summary,CompScoreTable)
 S3method(summary,FrequencyTable)
+S3method(summary,GroupAssignment)
 S3method(summary,ScaleSpec)
 export(CombScaleSpec)
 export(CompScoreTable)
 export(FrequencyTable)
+export(GroupAssignment)
+export(GroupConditions)
 export(STANINE)
 export(STEN)
 export(ScaleSpec)
@@ -25,6 +30,9 @@ export(TANINE)
 export(TETRONIC)
 export(WECHSLER_IQ)
 export(attach_scales)
+export(extract_observations)
+export(intersect_GroupAssignment)
+export(is.GroupConditions)
 export(normalize_score)
 export(normalize_scores_df)
 export(strip_ScoreTable)
