normalize_scores_grouped example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,8 +40,8 @@ export(extract_observations)
 export(intersect_GroupAssignment)
 export(is.GroupConditions)
 export(normalize_score)
-export(normalize_score_grouped)
 export(normalize_scores_df)
+export(normalize_scores_grouped)
 export(strip_ScoreTable)
 export(sum_items_to_scale)
 import(R6)
