--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ S3method(summary,FrequencyTable)
 S3method(summary,GroupAssignment)
 S3method(summary,GroupedFrequencyTable)
 S3method(summary,ScaleSpec)
+S3method(to_ScoringTable,GroupedScoreTable)
+S3method(to_ScoringTable,ScoreTable)
 export(CombScaleSpec)
 export(CompScoreTable)
 export(FrequencyTable)
@@ -36,12 +38,16 @@ export(TANINE)
 export(TETRONIC)
 export(WECHSLER_IQ)
 export(attach_scales)
+export(export_ScoringTable)
 export(extract_observations)
+export(import_ScoringTable)
 export(intersect_GroupAssignment)
 export(is.GroupConditions)
+export(is.ScoringTable)
 export(normalize_score)
 export(normalize_scores_df)
 export(normalize_scores_grouped)
 export(strip_ScoreTable)
 export(sum_items_to_scale)
+export(to_ScoringTable)
 import(R6)
