normalize_scores_scoring

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(is.ScoringTable)
 export(normalize_score)
 export(normalize_scores_df)
 export(normalize_scores_grouped)
+export(normalize_scores_scoring)
 export(strip_ScoreTable)
 export(sum_items_to_scale)
 export(to_ScoringTable)
