--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stenR
 Title: R6-based Standardization of Raw Discrete Scores 
-Version: 0.6.1.0006
+Version: 0.6.2
 Authors@R: 
     person(given = "Michal",
            family = "Kosinski",
@@ -22,6 +22,7 @@ Imports:
     data.table,
     dplyr,
     moments,
+    rlang,
     stats
 Suggests: 
     knitr,
