--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: stenR
 Title: R6-based Standardization of Raw Discrete Scores 
-Version: 0.6.2
+Version: 0.6.3
 Authors@R: 
     person(given = "Michal",
            family = "Kosinski",
@@ -17,14 +17,18 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends:
-    R6
+    R (>= 4.1)
 Imports:
+    cli,
     data.table,
     dplyr,
+    jsonlite,
     moments,
     rlang,
+    R6,
     stats
 Suggests: 
+    ggplot2,
     knitr,
     rmarkdown,
     SimMultiCorrData,
