cli work; moved examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,8 +43,18 @@ export(export_ScoringTable)
 export(extract_observations)
 export(import_ScoringTable)
 export(intersect_GroupAssignment)
+export(is.CombScaleSpec)
+export(is.FrequencyTable)
+export(is.GroupAssignment)
 export(is.GroupConditions)
+export(is.GroupedFrequencyTable)
+export(is.GroupedScoreTable)
+export(is.ScaleSpec)
+export(is.ScoreTable)
 export(is.ScoringTable)
+export(is.Simulated)
+export(is.StandardScale)
+export(is.intersected)
 export(normalize_score)
 export(normalize_scores_df)
 export(normalize_scores_grouped)
@@ -53,3 +63,10 @@ export(strip_ScoreTable)
 export(sum_items_to_scale)
 export(to_ScoringTable)
 import(R6)
+importFrom(cli,cli)
+importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_inform)
+importFrom(cli,cli_li)
+importFrom(cli,cli_text)
+importFrom(cli,cli_warn)
