--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,10 @@ import(R6)
 importFrom(cli,cli)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_end)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_li)
+importFrom(cli,cli_ol)
 importFrom(cli,cli_text)
+importFrom(cli,cli_ul)
 importFrom(cli,cli_warn)
