cli ScoreTable & FrequencyTable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(print,FrequencyTable)
 S3method(print,GroupAssignment)
 S3method(print,GroupConditions)
 S3method(print,GroupedFrequencyTable)
+S3method(print,GroupedScoreTable)
 S3method(print,ScaleSpec)
 S3method(print,ScoreTable)
 S3method(print,StandardScale)
