ScoringTable summary method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(summary,FrequencyTable)
 S3method(summary,GroupAssignment)
 S3method(summary,GroupedFrequencyTable)
 S3method(summary,ScaleSpec)
+S3method(summary,ScoringTable)
 S3method(to_ScoringTable,GroupedScoreTable)
 S3method(to_ScoringTable,ScoreTable)
 export(CombScaleSpec)
@@ -66,7 +67,6 @@ export(to_ScoringTable)
 import(R6)
 importFrom(cli,cli)
 importFrom(cli,cli_abort)
-importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_end)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_li)
