Update pkgdown yaml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,7 +6,7 @@ template:
   bootstrap: 5
 reference:
 - title: Basic normalization
-  desc: |>
+  desc: >
    Functions for basic (ungrouped) normalization in procedural workflow. They
    allow calculating table objects from raw scale/factor results and normalizing
    them (or new raw data) into quantiles, Z-scores or some standard score.
@@ -18,7 +18,7 @@ reference:
   - normalize_score
   - normalize_scores_df
 - title: Grouping normalization
-  desc: |>
+  desc: >
    Functions for grouped normalization in procedural workflow. There are functions
    for creating groups/strata based on some conditions, extracting their data 
    from whole dataset, and creating table objects for each of these groups.
@@ -35,7 +35,7 @@ reference:
   - plot.GroupedFrequencyTable
   - plot.GroupedScoreTable
 - title: ScoringTable - portable object for normalization
-  desc: |> 
+  desc: > 
    FrequencyTable and ScoreTable objects (and their grouped brethren) are easily
    created from raw data. They aren't as easile exported or imported, though.
    ScoringTable allows keeping the standardized scores for one scale in easily
@@ -47,13 +47,13 @@ reference:
   - export_ScoringTable
   - normalize_scores_scoring
 - title: S3 classes manipulators
-  desc: |>
+  desc: >
    Simple helper functions for manipulation and transforming basic S3 classes.
 - contents:
   - attach_scales
   - strip_ScoreTable
 - title: Item score preprocessors
-  desc: |>
+  desc: >
    Data is most often available not as a raw scores of scales, but individual
    items. These functions are created to make your jouney from items to scales
    as painless as possible!
@@ -62,14 +62,14 @@ reference:
   - CombScaleSpec
   - sum_items_to_scale
 - title: Object Oriented workflow
-  desc: |>
+  desc: >
    Complex R6 object mirroring the ungrouped procedural workflow, allowing
    for much faster and expressive calculations and continuous recalculation
    of tables based on new data. Object for grouped tables coming soon!
 - contents:
   - CompScoreTable
 - title: Varia
-  desc: |>
+  desc: >
    Various additional simple functions, default StandardScale objects available
    within the package and some prepackaged data for learning.
 - contents:
