import/export ScaleSpec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,8 +41,10 @@ export(TANINE)
 export(TETRONIC)
 export(WECHSLER_IQ)
 export(attach_scales)
+export(export_ScaleSpec)
 export(export_ScoringTable)
 export(extract_observations)
+export(import_ScaleSpec)
 export(import_ScoringTable)
 export(intersect_GroupAssignment)
 export(is.CombScaleSpec)
