--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "kosinski.mich@gmail.com",
            comment = c(ORCID = "https://orcid.org/0000-0002-8426-3654"))
-Description: stenR creates an user-friendly framework to preprocess raw item
+Description: An user-friendly framework to preprocess raw item
              scores of questionnaires into factors or scores and standardize
              them. Standardization can be made either by their normalization
-             in big sample, or by import of premade scoring table.
+             in representative sample, or by import of premade scoring table.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
