--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,3 +76,4 @@ importFrom(cli,cli_ol)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
 importFrom(cli,cli_warn)
+importFrom(utils,packageVersion)
